Toast and Sound Complete

--- a/app/src/main/res/values/my_aboutme.xml
+++ b/app/src/main/res/values/my_aboutme.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="Name">นาย : กลินท์ โอชะกะ</string>
-    <string name="Id">รหัส : 5711020660026</string>
-    <string name="Cousre">หลักสูตร : วิทยาการคอมพิวเตอร์</string>
-    <string name="Facebook">Facebook : https://www.facebook.com/kalin.ochaka</string>
-    <string name="Amtitle">About Me</string>
+    <string name="Name"><b>นาย : </b>กลินท์ โอชะกะ</string>
+    <string name="Id"><b>รหัส : </b>5711020660026</string>
+    <string name="Cousre"><b>หลักสูตร : </b>วิทยาการคอมพิวเตอร์</string>
+    <string name="Facebook"><b>Facebook : </b>https://www.facebook.com/kalin.ochaka</string>
+    <string name="Amtitle"><b>About Me</b></string>
+    <string name="amtel"><b>เบอร์ติดต่อ : </b>097-002-8811</string>
 
 </resources>
