--- a/app/src/main/res/layout/activity_aboutme.xml
+++ b/app/src/main/res/layout/activity_aboutme.xml
@@ -84,7 +84,7 @@
                 android:textSize="@dimen/h3" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/txtTel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/my_margin"
